@@ -348,6 +348,11 @@
 
 <!ENTITY url-arm-cyrius-nslu2 "http://www.cyrius.com/debian/nslu2/">
 
+<!ENTITY url-arm-cyrius-kuroboxpro "http://www.cyrius.com/debian/orion/buffalo/kuroboxpro/">
+
+<!ENTITY url-arm-cyrius-mv2120 "http://www.cyrius.com/debian/orion/hp/mv2120">
+
+<!ENTITY url-arm-cyrius-qnap "http://www.cyrius.com/debian/orion/qnap/">
 
 <!-- ******************************************  sparc links -->
 <!--
